fixed alignment in current.html ; added placeholder imgs for future lazy loading.

--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,6 @@ body {
 
 .projects{
   margin: 0 auto;
-  border: 2px solid #ff9900;
   padding: 1rem;
 }
 
